# pgm-extra-rs

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
benches/: pgm_bench.rs
src/: error.rs  lib.rs
src/collections/: map.rs  set.rs
src/index/: builder.rs  key.rs  mod.rs  model.rs  segment.rs
src/index/owned/: dynamic.rs  mod.rs
src/util/: approx_pos.rs  bytes.rs  cache.rs  mod.rs  range.rs  search.rs
tests/: proptest_index.rs  rkyv.rs  serde.rs
