[package]
name = "pgm-extra"
version = "1.2.2"
edition = "2024"
description = "PGM-Extra: high-performance learned index structures for Rust"
license = "MIT"
repository = "https://github.com/itsfoxstudio/pgm-extra-rs"
keywords = ["data-structure", "index", "learned-index", "pgm"]
categories = ["data-structures", "algorithms"]

[features]
default = ["std"]
std = ["num-traits/std"]
parallel = ["std", "rayon"]
simd = []
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
rkyv = { version = "0.8.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rand = "0.8"
serde_json = "1.0"
stats_alloc = "0.1"

[[bench]]
name = "pgm_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
